traffic-splitting/manifest/virtual-service/frontend-virtualsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-postsapp
spec:
  hosts: 
  - "posts.com"
  gateways:
  - app-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: client-srv.postsapp.svc.cluster.local
        port:
          number: 3000
        subset: client-v1
      weight: 0
    - destination:
        host: client-srv.postsapp.svc.cluster.local
        port:
          number: 3000
        subset: client-v2
      weight: 80
    - destination:
        host: client-srv.postsapp.svc.cluster.local
        port:
          number: 3000
        subset: client-v3
      weight: 20
